# skitter

./: .gitignore  Cargo.toml  README.md  TODO.txt  build.rs  rust-toolchain.toml
crates/skitter-macro/: Cargo.toml
src/: abi.rs  builtins.rs  bytecode_compiler.rs  bytecode_select.rs  cache_provider.rs  cli.rs  closure.rs  crate_provider.rs  hir_compiler.rs  impls.rs  ir.rs  ir_crate.rs  items.rs  layout.rs  lazy_collections.rs  main.rs  mir_compiler.rs  persist.rs  persist_header.rs  profiler.rs  rustc_worker.rs  simple_jit.rs  test.rs  value_debug.rs  variants.rs
src/ir/: const_util.rs  converter.rs  glue_builder.rs  ir.rs  ir_print.rs  mod.rs
src/types/: common_types.rs  drop.rs  layout.rs  mod.rs  subs.rs  type_context.rs  type_persist.rs  types.rs
src/vm/: _exec_match.txt  exec.rs  externs.rs  function.rs  instr.rs  mod.rs  vm.rs
test/: _builtin.rs
test/0_prim/: adverse_infer.rs  as_float.rs  as_int.rs  bool.rs  char.rs  f32.rs  f64.rs  i128.rs  i128_small.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  never.rs  print.rs  suffix.rs  void.rs  void_assign.rs
test/1_ctrl/: _builtin.rs  blocks.rs  break.rs  break_label.rs  break_never.rs  break_val.rs  call.rs  call_arg_slots.rs  call_arg_slots_big.rs  call_arg_slots_compound.rs  call_arg_slots_ref.rs  if.rs  if_else.rs  if_else_val.rs  lazy_logic.rs  loop.rs  loop_ret.rs  match.rs  recursive.rs  shadow.rs  while.rs
test/2_compound/: alias.rs  array.rs  array_repeat.rs  closure_in_const.rs  coercion.rs  const.rs  const_generics.rs  const_mut_ref.rs  enum.rs  enum_discrim.rs  enum_no_fields.rs  enum_self_alias.rs  enum_size.rs  fn_pointer.rs  fn_pointer_generic.rs  impl_swap.rs  impl_tricky.rs  mut_ref_traits.rs  pattern_lit.rs  pattern_mut_place.rs  pattern_range.rs  (+23 more)
(+57 files in other folders)
