[package]
name = "skitter"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Does this setting even work? I copied it from another project.
[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
colored = "2.0.0"
clap = { version = "4.2.4", features = ["derive"] }
