[package]
name = "skitter"
version = "0.0.0"
edition = "2021"
description = "Reserving this name. If I don't publish soon-ish free to harass me for this."

include = [
    "Cargo.toml",
]

# Does this setting even work? I copied it from another project.
[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
colored = "2.0.0"
clap = { version = "4.2.4", features = ["derive"] }
