[package]
name = "skitter"
description = "An experimental bytecode interpreter for the Rust programming language. Not fit for any kind of serious use."
authors = ["Adam Coggeshall <adam@cogg.rocks>"]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

include = [
    "Cargo.toml",
]

# Does this setting even work? I copied it from another project.
[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]

# For filenames.
md5 = "0.7.0"
base64 = "0.21.2"

colored = "2.0.4"
clap = { version = "4.2.4", features = ["derive"] }
colosseum = "0.2.2"

# Faster hashmaps
ahash = "0.8.3"

# Does not actually seem to help.
#mimalloc = { version = "0.1.37", default-features = false }

# Macros
skitter-macro = { path = "./crates/skitter-macro" }
paste = "1.0.14"

# simple JIT
dynasmrt = "2.0.0"

[profile.release]
debug = true
